--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +35,7 @@
     }
    ],
    "source": [
-    "imagen = \"../Taller PDI/Imagenes/Estudio2.jpg\"\n",
+    "imagen = \"Imagenes/Estudio2.jpg\"\n",
     "img = io.imread(imagen)\n",
     "plt.imshow(img)\n",
     "plt.show()"
@@ -38,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "computacion",
+   "display_name": "envCompu",
    "language": "python",
    "name": "python3"
   },
